Add logging to Kafka

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=WARN, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -13,5 +13,5 @@ log4j.appender.stdout.layout.ConversionPattern=[%d] %p [%t] %m (%c)%n
 log4j.logger.org.apache.kafka.streams.processor.internals.StreamThread=FATAL, stdout
 
 # Enable for debugging if need be
-log4j.logger.io.confluent=INFO, stdout
+log4j.logger.io.confluent=WARN, stdout
 log4j.additivity.io.confluent=false
