Upgrade dependencies and upgrade to Java 11

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,6 +9,6 @@ kafka {
 }
 
 mongodb {
-  uri = "mongodb://localhost:27017"
+  uri = "mongodb://localhost:27017/?retryWrites=true"
   database = "es"
 }
